# Multi-class-classifier

./: .gitignore  README.md  SOLUTION.md  pyproject.toml  run.py
src/ml_classifier/: __init__.py  cli.py  config.py
src/ml_classifier/data/: __init__.py  load.py  split.py
src/ml_classifier/features/: __init__.py  build.py
src/ml_classifier/model/: __init__.py  predict.py  train.py
